tests/errors/semantics/block_must_be_empty_or_end_in_statement.odl
main :: () -> void  {
    {
        x := 1;
    };
};